shifting book grid images to object-fit:contain with fixed height, fluid width

--- a/css/index.css
+++ b/css/index.css
@@ -1077,20 +1077,12 @@ blockquote {
 .tmpl-books-list .container {
   display: grid;
   grid-template-columns: var(--grid--narrow);
-  /* grid-template-columns:
-    calc(50vw - 17em)
-    [content-start] 1fr
-    calc(50vw - 17em); */
 }
 
 @media (min-width: 45rem) {
   .tmpl-books-list .container {
     grid-template-columns: var(--grid--base);
     margin: 2em 0;
-    /* grid-template-columns:
-      calc(50vw - 24.875em)
-      [content-start] 1fr
-      calc(50vw - 24.875em); */
   }
 }
 
@@ -1188,47 +1180,9 @@ blockquote {
 .bookslist-item .book-thumb {
   max-width: 100%;
   width: 100%;
-  height: 100%;
-  max-height: 245px;
-  min-height: 220px;
-  object-fit: cover;
-  object-position: top;
-}
-
-@media (min-width: 25em) {
-  .bookslist-item .book-thumb {
-    max-width: 100%;
-    width: 100%;
-    height: 100%;
-    max-height: unset;
-    min-height: 220px;
-    object-fit: cover;
-    object-position: top;
-  }
-}
-
-@media (min-width: 45em) {
-  .bookslist-item .book-thumb {
-    max-width: 100%;
-    width: 100%;
-    height: 100%;
-    max-height: unset;
-    min-height: 220px;
-    object-fit: cover;
-    object-position: top;
-  }
-}
-
-@media (min-width: 65em) {
-  .bookslist-item .book-thumb {
-    max-width: 100%;
-    width: 100%;
-    height: 100%;
-    max-height: none;
-    min-height: 220px;
-    object-fit: cover;
-    object-position: top;
-  }
+  height: 220px;
+  object-fit: contain;
+  object-position: bottom;
 }
 
 /* Image Grid */
